Gender changed to list